Update to java 23